projects/lungmen.akn/src/apps/jellyseerr/security/network-policy.allow-jellyseerr-to-internet.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows Jellyseerr to access specific internet resources for core functionality:
      - TMDB API (api.themoviedb.org) for movie and TV show metadata, artwork, and information
      - TMDB Image API (image.tmdb.org) for image assets
      - GitHub API (api.github.com) for checking application updates
      All connections are restricted to HTTPS (port 443) only.
  name: allow-jellyseerr-to-internet
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jellyseerr
  egress:
    - toFQDNs:
        # Allow access to TMDB API for metadata
        - matchName: api.themoviedb.org
        - matchName: image.tmdb.org

        # Allow access to Github API to check for updates
        - matchName: api.github.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
